fixed depreciated code for Summer 24 API v 61.

--- a/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsAdditionalQuestionsCtlr.cls
@@ -391,7 +391,9 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
             existingPicklistString = namespace + existingPicklistString;
         }
 
-        Schema.DescribeSObjectResult registrationDescribe = ((SObject) Type.forName('Schema', namespace + 'Summit_Events_Registration__c').newInstance()).getSObjectType().getDescribe();
+        Type registrationType = Type.forName(namespace + 'Summit_Events_Registration__c');
+        SObject registrationObj = (SObject) registrationType.newInstance();
+        DescribeSObjectResult registrationDescribe = registrationObj.getSObjectType().getDescribe();
 
         List<Schema.PicklistEntry> PicklistValues = registrationDescribe.fields.getMap().get(existingPicklistString).getDescribe().getPicklistValues();
         picklists.add(new SelectOption('', 'Select...'));
@@ -468,10 +470,11 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
             Map<String, String> queryInfo = (Map<String, String>) JSON.deserialize(question, Map<String, String>.class);
             if (queryInfo.size() > 0) {
                 String lookupQuery = '';
-                Schema.DescribeSObjectResult lookupObjectDesc = null;
+                DescribeSObjectResult lookupObjectDesc = null;
                 try {
-                    //Define lookup object
-                    lookupObjectDesc = ((SObject) Type.forName('Schema', queryInfo.get('Lookup_Object__c')).newInstance()).getSObjectType().getDescribe();
+                    Type lookupObjType = Type.forName(queryInfo.get('Lookup_Object__c'));
+                    SObject lookupObject = (SObject) lookupObjType.newInstance();
+                    lookupObjectDesc = lookupObject.getSObjectType().getDescribe();//Define lookup object
                 } catch (Exception e) {
                     ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.WARNING, 'Lookup object is inaccessible.' + e.getMessage()));
                 }
@@ -532,8 +535,11 @@ public with sharing class SummitEventsAdditionalQuestionsCtlr {
                                         validLookupFields.add('Id');
                                         for (Integer xx = 0; xx < validLookupFields.size(); xx++) {
                                             //Don't ever show Ids in the returned value list
-                                            SObjectType lookupObjectDescribe = ((SObject) Type.forName('Schema', queryInfo.get('Lookup_Object__c')).newInstance()).getSObjectType();
-                                            String fieldType = String.valueOf(lookupObjectDescribe.getDescribe().fields.getMap().get(validLookupFields[xx]).getDescribe().getType()).toLowerCase();
+                                            Type lookupObjectType = Type.forName(queryInfo.get('Lookup_Object__c'));
+                                            SObject lookupObject = (SObject) lookupObjectType.newInstance();
+                                            DescribeSObjectResult lookupObjectDescribe = lookupObject.getSObjectType().getDescribe();
+                                            String fieldType = String.valueOf(lookupObjectDescribe.fields.getMap().get(validLookupFields[xx]).getDescribe().getType()).toLowerCase();
+
                                             if (fieldType != 'id') {
                                                 if (xx == 0) {
                                                     lineOne = (String) obj.get(validLookupFields[xx]);
