--- a/force-app/main/default/classes/SummitEventsShared.cls
+++ b/force-app/main/default/classes/SummitEventsShared.cls
@@ -616,6 +616,25 @@ public with sharing class SummitEventsShared {
         return pickList;
     }
 
+    // Test to see if person accounts are enabled.
+    public static Boolean personAccountsEnabled()
+    {
+        try
+        {
+            // Try to use the isPersonAccount field.
+            sObject testObject = new Account();
+            testObject.get( 'isPersonAccount' );
+            // If we got here without an exception, return true.
+            return true;
+        }
+        catch( Exception ex )
+        {
+            // An exception was generated trying to access the isPersonAccount field
+            // so person accounts aren't enabled; return false.
+            return false;
+        }
+    }
+
     //Method to test object and field availability for current user (Guest user)
     public static String checkFieldGuestAccess(String objectApiName, String fieldName, String requiredFieldType, Boolean testCreatable, String qualifierLabel) {
         String returnError = '';
